# homeslice

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  README  README.md  homeslice.json  homeslice.py  homeslice.wsgi  migrate.sql  requirements.txt  schema.sql  spot.py  spotify.json.example  www.py
.github/workflows/: flow.yaml  make-test.yaml  make.yaml  pipes.yaml
app/: docker-app-homeslice.sh  homeslice.ini  homeslice.py  requirements.txt  schema.sql  wsgi.py
app/sketches/: lightswitch.ino
app/templates/: sonos.html
apps/: Makefile  make.mk
apps/backup-tidal/: .gitignore  Dockerfile  Makefile  README.md  backup-tidal.py  backup_tidal.py  login-tidal.py  login_tidal.py  pyproject.toml  remedy_unavailables.py  requirements-lint.txt  requirements.txt
apps/backup-todoist/: .gitignore  Dockerfile  README.md  go.mod  go.sum
apps/backup-unifi/: .gitignore  Dockerfile  Makefile  README.md  backup_unifi.py  pyproject.toml  requirements-lint.txt
apps/buttons/: .dockerignore  Dockerfile  go.mod  go.sum
apps/chime/: .gitignore  Dockerfile  Dockerfile-lint  Makefile  README.md  chime.py  discover.py  pyproject.toml  requirements-lint.txt  requirements-linter.txt  requirements.txt
apps/chime/media/: README.md
apps/clocktime/: .gitignore  Dockerfile  Makefile  go.mod
apps/gosonos/: .gitignore  Dockerfile  Makefile  README.md  config.yaml  ff.nice.xml  ff.xml  go.mod  go.sum
apps/remedy-tidal/: .env  .envrc  .gitignore  Dockerfile  Makefile  pyproject.toml  remedy_tidal.py
apps/remedy-tidal/src/core/: logging.py  model.py
apps/remedy-tidal/src/core/tidal/: auth.py  playlist.py  track.py
apps/remedy-tidal/src/orchestration/: image_spec.py  secrets.py
apps/remedy-tidal/src/tasks/: __init__.py  decorate_title.py  fetch_playlist.py  filter.py  find_new_track.py  get_last_title.py  publish_playlist.py
apps/remedy-tidal/src/workflows/: remedy_tidal.py
apps/remedy-tidal/tests/: test_tidal.py
apps/remedy-tidal/tidal/: auth.py  playlist.py
config/: 000-default.conf  homeslice.json  homeslice.nginx
pulumi/: .gitignore  Dockerfile-lint  IMPROVEMENTS.md  Makefile  Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  bump.py  homeslice_secrets.pyi  pyproject.toml  requirements-bump.txt  requirements-lint.txt  requirements.txt
sketches/: songos.ino
(+148 files in other folders)
